<resources>
    <string name="app_name">McD Terminal</string>
    <string name="action_settings">Settings</string>


    <!--Strings für Startbildschirm  -->

    <string name="question_text">Wählen Sie eine Test-Version</string>
    <string name="no_avatar_no_nudging">Standard Version</string>
    <string name="no_avatar_nudging">Nur Nudging</string>
    <string name="avatar_no_nudging">Nur Avatar</string>
    <string name="avatar_nudging">Kombinierte Version</string>
    <string name="title_activity_launch_terminal">LaunchTerminal</string>

</resources>
