<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no_avatar_no_nudging"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no_avatar_no_nudging"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/no_avatar_nudging"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no_avatar_nudging"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/avatar_no_nudging"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/avatar_no_nudging"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/avatar_nudging"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/avatar_nudging"
            android:textSize="20sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:padding="24dp"
        android:text="@string/question_text"
        android:textSize="30sp"/>

</FrameLayout>